doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Víctor\Desktop\DAM\Programación\Recursos BlueJ\snake-game
-d
C:\Users\Víctor\Desktop\DAM\Programación\Recursos BlueJ\snake-game\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Víctor\Desktop\DAM\Programación\Recursos BlueJ\snake-game\Serpiente.java
<---- end of javadoc command ---->
Loading source file C:\Users\Víctor\Desktop\DAM\Programación\Recursos BlueJ\snake-game\Serpiente.java...
Constructing Javadoc information...
C:\Users\Víctor\Desktop\DAM\Programación\Recursos BlueJ\snake-game\Serpiente.java:50: error: cannot find symbol
    public ArrayList<Segmento> getSerpiente()
                     ^
  symbol:   class Segmento
  location: class Serpiente
Standard Doclet version 1.8.0_40
Building tree for all the packages and classes...
Generating C:\Users\Víctor\Desktop\DAM\Programación\Recursos BlueJ\snake-game\doc\Serpiente.html...
Generating C:\Users\Víctor\Desktop\DAM\Programación\Recursos BlueJ\snake-game\doc\package-frame.html...
Generating C:\Users\Víctor\Desktop\DAM\Programación\Recursos BlueJ\snake-game\doc\package-summary.html...
Generating C:\Users\Víctor\Desktop\DAM\Programación\Recursos BlueJ\snake-game\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Víctor\Desktop\DAM\Programación\Recursos BlueJ\snake-game\doc\allclasses-frame.html...
Generating C:\Users\Víctor\Desktop\DAM\Programación\Recursos BlueJ\snake-game\doc\allclasses-noframe.html...
Generating C:\Users\Víctor\Desktop\DAM\Programación\Recursos BlueJ\snake-game\doc\index.html...
Generating C:\Users\Víctor\Desktop\DAM\Programación\Recursos BlueJ\snake-game\doc\stylesheet.css...
1 warning
